--- a/index.css
+++ b/index.css
@@ -1,21 +1,21 @@
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
-    
- 
-   
+    box-sizing: border-box;   
 }
 
 body{
     background-color: rgb(19, 24, 39);
+    background-size: 100%;
     color: white;
+    height: 100vh;
+    
 }
 
 img{
     max-width: 50vw;
-   display: inline;
-   
+    display: inline;
+    
    
 }
 
@@ -23,14 +23,16 @@ img{
     padding: 80px; 
     min-width: 100%;
     min-height: 100%;
+    max-height: 100%;
     
 }
 
 .main-area{
    
     width: auto;
-    height: 100vh;
+    height: 80vh;
     position: relative;  
+    
     
 }
 
@@ -39,16 +41,20 @@ img{
     position: absolute;
     width: auto;
     margin-left: 500px;
+    right: 0%;
+    height: 70%;
 }
 
 .resto{
-    background-color: rgb(19, 24, 39);
-    height: 500px;
+    background-color: rgb(19, 24, 39);    
+    width: fit-content;
+    min-height: fit-content;
     position: absolute;
     width: auto;
     margin-right: 500px;
-    margin-top: 100px;
+    margin-top: 80px;
     padding-top: 80px;
+    flex-direction: column;     
 }
 
 .icon{
@@ -76,19 +82,83 @@ img{
     font-size: xx-large;
 }
 
+#publish{
+    color: rgb(85, 228, 175);
+}
+
 #everywhere{
-    color: aqua;
+   
 }
 
 .description{
     color: rgb(255, 255, 255);
-    font-family: 'Smooch Sans', sans-serif;
+    font-family: sans-serif;
     font-size: x-large;
     margin-top: 50px;
     margin-bottom: 50px;
+    width: 80%;
 }
 
 
 .botao{
-    display: inline-block;
+    display: inline-block;  
+    display: flex;
+    justify-content: center;
+    align-items: right;
+    margin: 1%;
+    margin-right: 1%;
+    right: 0%;
+    float: right;
+    height: 35px;
+}
+
+.email-field{
+
+    position: relative;
+    box-sizing: border-box;
+    margin: 2%;
+    padding-left: 5%;
+    display: flex;
+    height: 50px;
+    max-width: 100vw;
+    background-color: rgb(31, 38, 59);
+    border: 5px rgb(31, 38, 59);
+    border-radius: 50px;
+    justify-content: center;
+    margin-right: 20%;
+    
+}
+
+#botao{
+    background-color: rgb(85, 228, 175);
+    border: 5px solid rgb(85, 228, 175);
+    border-radius: 50px;
+    position: relative;
+    width: 10vw;  
+}
+
+#nome{
+    border: none;
+    background-color: rgb(31, 38, 59) ;
+    color: aliceblue;
+    position: relative;
+    left: 0px;
+    width: 100%;
+
+}
+
+#botao:hover{
+    background-color: rgb(95, 179, 179);
+    border-color: rgb(95, 179, 179);
+    cursor: pointer;
+}
+
+#botao:active{
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(255, 255, 255);
+}
+
+
+#nome:active{
+    border: none;
 }
