--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ img{
 
 .back-image{
     
-    position: absolute;
+    position: fixed; /*absolute*/
     width: auto;
     margin-left: 500px;
     right: 0%;
@@ -47,8 +47,8 @@ img{
 
 .resto{
     background-color: rgb(19, 24, 39);    
-    width: fit-content;
-    min-height: fit-content;
+    width: 70%;
+    /*in-height: fit-content;*/
     position: absolute;
     width: auto;
     margin-right: 500px;
@@ -99,19 +99,6 @@ img{
     width: 80%;
 }
 
-
-.botao{
-    display: inline-block;  
-    display: flex;
-    justify-content: center;
-    align-items: right;
-    margin: 1%;
-    margin-right: 1%;
-    right: 0%;
-    float: right;
-    height: 35px;
-}
-
 .email-field{
 
     position: relative;
@@ -129,12 +116,30 @@ img{
     
 }
 
+.botao{
+    position: relative;
+    display: inline-block;  
+    display: flex;
+    justify-content: center;
+    align-items: right;
+  /*  margin: 1%;
+    margin-right: 1%;
+    right: 0%;*/
+    float: right;
+    height: 80%;
+    margin-top: 5px;
+    margin-right: 4px;
+    
+}
+
+
 #botao{
     background-color: rgb(85, 228, 175);
     border: 5px solid rgb(85, 228, 175);
     border-radius: 50px;
-    position: relative;
+    /*position: relative;*/
     width: 10vw;  
+    
 }
 
 #nome{
@@ -144,6 +149,7 @@ img{
     position: relative;
     left: 0px;
     width: 100%;
+    
 
 }
 
@@ -159,6 +165,7 @@ img{
 }
 
 
-#nome:active{
-    border: none;
+#nome:focus{
+    box-shadow: 0 0 0 0;
+    outline: 0;
 }
