--- a/index.css
+++ b/index.css
@@ -142,7 +142,7 @@ img{
     
 }
 
-#nome{
+#email{
     border: none;
     background-color: rgb(31, 38, 59) ;
     color: aliceblue;
@@ -165,7 +165,7 @@ img{
 }
 
 
-#nome:focus{
+#email:focus{
     box-shadow: 0 0 0 0;
     outline: 0;
 }
@@ -176,4 +176,8 @@ img{
     height: 40px;
     width: 70%;
     margin-left: 2%;
+}
+
+.emailfail{
+    border: 2px solid red; !important
 }
