Atualizações no CSS e Javascript
Foram feitas correções no processo de validação, mostrando uma mensagem de email inválido no placeholder do email, juntamente com a limpeza do campo após o clique no  botão

--- a/index.css
+++ b/index.css
@@ -173,11 +173,14 @@ img{
 .platforms{
 
     box-sizing: border-box;
+    
     height: 40px;
     width: 70%;
     margin-left: 2%;
 }
 
 .emailfail{
-    border: 2px solid red; !important
+    color: red; !important;
+    border: 2px solid red; !important;
+    
 }
