--- a/index.css
+++ b/index.css
@@ -191,3 +191,39 @@ img{
     border: 2px solid red; !important;
     
 }
+
+
+@media screen and (max-width: 720px ) {
+    
+    .email-field{
+
+        position: relative;
+        box-sizing: border-box;
+        margin: 2%;
+        padding-left: 5%;
+        display: flex;
+        height: 50px;
+        max-width: 100vw;
+        background-color: rgb(31, 38, 59);
+        border: 5px rgb(31, 38, 59);
+        border-radius: 50px;
+        justify-content: center;
+        margin-right: 5%;
+        
+    }
+
+    .resto{
+        background-color: rgb(19, 24, 39);    
+        width: 80%;
+        height: 80vh;
+        /*in-height: fit-content;*/
+        position: absolute;
+       /* width: auto;*/
+        margin-right: 500px;
+        margin-top: 2%; /*80px*/
+        padding-top: 2%; /*80px*/
+        flex-direction: column;    
+        
+    }
+
+}
