--- a/index.css
+++ b/index.css
@@ -200,15 +200,16 @@ img{
         position: relative;
         box-sizing: border-box;
         margin: 2%;
-        padding-left: 5%;
+        padding-left: 2%;
         display: flex;
         height: 50px;
-        max-width: 100vw;
+        width: 90vw;
         background-color: rgb(31, 38, 59);
         border: 5px rgb(31, 38, 59);
         border-radius: 50px;
         justify-content: center;
         margin-right: 5%;
+        border: solid 5px red; /* apagar */
         
     }
 
@@ -223,7 +224,16 @@ img{
         margin-top: 2%; /*80px*/
         padding-top: 2%; /*80px*/
         flex-direction: column;    
+        border: solid 5px red; /* apagar */
+    }
+
+    .platforms{
+        position: relative;
+        box-sizing: border-box;
         
+        height: 40px;
+        width: 70%;
+        margin-left: 2%;
     }
 
 }
